# FD-Bot

./: .gitignore  README.md  extract.py  pyproject.toml
src/: app.py  check.py  ingest.py  rag.py  utils.py
