[project]
name = "fd-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.92.0",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]
